# mirror-recipes

./: .gitignore  200.html  CNAME  LICENSE  README.md  bundle.2817b.css  bundle.2d6ea.js  bundle.2d6ea.js.map  bundle.3f7e8.esm.js  bundle.3f7e8.esm.js.map  bundle.502fa.esm.js  bundle.502fa.esm.js.map  bundle.57224.js  bundle.57224.js.map  bundle.6b7c0.esm.js  bundle.6b7c0.esm.js.map  bundle.90952.css  bundle.91233.esm.js  bundle.91233.esm.js.map  bundle.a744f.js  bundle.a744f.js.map  bundle.cc87c.js  bundle.cc87c.js.map  index.html  polyfills.e3a06.esm.js  polyfills.e3a06.esm.js.map  presets.tgz  presets.tgz.sha256  push-manifest.json  recipes.tgz  route-Home.chunk.2c29c.js  route-Home.chunk.2c29c.js.map  route-Home.chunk.35ae7.js  route-Home.chunk.35ae7.js.map  route-Home.chunk.8435a.esm.js  route-Home.chunk.8435a.esm.js.map  route-Home.chunk.9aebc.css  route-Home.chunk.ac7ee.esm.js  route-Home.chunk.ac7ee.esm.js.map  route-List.chunk.068d3.js  (+33 more)
.github/workflows/: driver.yml  pages.yml
assets/recipes/: AUR.yml  archlinux.yaml  ubuntu.yaml
driver/: Cargo.toml
driver/src/: args.rs  exec.rs  main.rs  params.rs  preset.rs  recipe.rs
presets/: TUNA.yaml
recipes/: AUR.yml  ubuntu.yaml
schema/: preset.json  recipe.json
ssr-build/: ssr-bundle.8284b.css  ssr-bundle.8284b.css.map  ssr-bundle.9d14d.css  ssr-bundle.9d14d.css.map  ssr-bundle.js  ssr-bundle.js.map
web/homepage/: README.md  package.json  preact.config.js  tsconfig.json
web/homepage/src/: app.tsx  declaration.d.ts  index.ts  template.html  util.ts
web/renderer/: package.json
(+24 files in other folders)
