[package]
name = "mirror-recipe-driver"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
log = "0.4.14"
paw = "1.0.0"
serde = { version="1.0.123", features=["derive"] }
serde_yaml = "0.8.17"
structopt = { version="0.3.21", features=["paw"] }
