[package]
name = "mirror-recipe-driver"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bat = "0.17.1"
colored = "2.0.0"
ctrlc = "3.1.7"
dialoguer = { git="https://github.com/CircuitCoder/dialoguer" }
env_logger = "0.8.3"
log = "0.4.14"
paw = "1.0.0"
regex = "1.4.3"
serde = { version="1.0.123", features=["derive"] }
serde_with = "1.6.4"
serde_yaml = "0.8.17"
structopt = { version="0.3.21", features=["paw"] }
syntect = "4.5.0"
sys-info = "0.8.0"
tempfile = "3.2.0"
which = "4.0.2"
